--- a/app/styles/homepage.css
+++ b/app/styles/homepage.css
@@ -13,7 +13,7 @@ body {
   padding: 60px;
   min-height: 100vh;
   display: flex;
-  align-items: flex-end;
+  align-items: flex-start;
   justify-content: space-between;
 }
 
@@ -21,6 +21,7 @@ body {
   flex: 1;
   max-width: 60%;
   padding-right: 60px;
+  padding-top: 0;
 }
 
 .main-text h1 {
